Make bearing attribute of a SensorContact optional.  Update tests to reflect this.